<resources>
    <string name="app_name">МСМ Агент</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Enter find string</string>
    <string name="hint_search_box">Search text</string>
    <string name="find">Поиск</string>
    <string name="tree_value">Каталог</string>
    <string name="date_doc">Дата</string>
    <string name="number_doc">№</string>
    <string name="store_doc">Склад</string>
    <string name="counterparties_doc">Контрагент:</string>
    <string name="sklad_main_doc">Владивосток</string>
    <string name="store_value">На складе</string>
    <string name="price_value">Цена</string>
    <string name="in_doc_value">В заказ</string>
    <string name="count_value">Количество</string>
    <string name="discount_value">Скидка</string>
    <string name="summ_value">Сумма</string>
    <string name="filtr_value">Фильтр</string>
    <string name="amount_text">Только с остатками</string>
    <string name="find_text">Поиск</string>
    <string name="pricegroup">Ценовая группа</string>
    <string name="vendor">Производитель</string>
    <string name="summ_all">Сумма всего:</string>
    <string name="back">Назад</string>
    <string name="companies_value">Введите название компании</string>
    <string name="button_text_ok">OK</string>
    <string name="text_vendor">Бренд</string>
    <string name="orders_value">Заказы</string>
    <string name="order_value">Заказ</string>
    <string name="exchange_value">Обмен</string>
    <string name="selection">Подбор</string>
    <string name="cansel">Отмена</string>
    <string name="adress_value">Адрес доставки</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Добро пожаловать! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Пароль должен быть больше 2 символов</string>
    <string name="login_failed">"Ошибка входа"</string>
    <string name="name_user">Имя пользователя</string>
    <string name="logout">Выход</string>
    <!-- Strings PageAdapter -->
    <string name="start_page_title">Заказ</string>
    <string name="basket_page_title">Корзина</string>
    <string name="end_page_title">Оформить заказ</string>
    <string name="extended_fab_content_desc">Подбор товара</string>
    <string name="extended_fab_label">Подбор товара</string>
    <string name="pickup">Самовывоз</string>
    <string name="my_value">Только мои</string>
    <string name="create_doc">Создать заказ</string>
    <string name="orders_text">Заказы</string>
    <string name="create_order_text">Создать заказ</string>
    <string name="exchange_text">Обмен</string>
    <string name="visit_plan_text">План посещений</string>
    <string name="start_obmen">Старт обмена</string>
    <string name="storage_value">Склад продажи</string>
    <string name="no_Internet">Интернет соединение отсутствует</string>
    <string name="login_string">Войдите, чтобы продолжить</string>
    <string name="update_app">Update app</string>
    <string name="category">Категория</string>
    <string name="count_product">Всего товаров</string>
    <string name="skidka">Скидка</string>
    <string name="summ_oplata">Сумма к оплате</string>
    <string name="zakaz">Заказ</string>
    <string name="dolg">Текущий долг</string>
    <string name="prosDolg">ПДЗ</string>
    <string name="dolg5">5 дней</string>
    <string name="next">Продолжить</string>
    <string name="yuor_price">Ваша цена</string>
    <string name="summ">Сумма</string>
    <string name="errorVersion">"Версия файла обмена отличается от версии используемой программой! Обновите программу и продолжите работу!"</string>
    <string name="save">Сохранить</string>
</resources>