<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.requestDocument.RequestDocFragment">

    <com.google.android.material.navigationrail.NavigationRailView
        android:id="@+id/navigation_rail"
        style="@style/Widget.MaterialComponents.NavigationRailView.Compact"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:elevation="4dp"
        app:headerLayout="@layout/layout_header"
        app:labelVisibilityMode="selected"
        app:menu="@menu/doc_navigation_rail"
        app:menuGravity="center"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/date_doc"
        app:layout_constraintStart_toEndOf="@+id/navigation_rail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="false"
        android:ems="10"
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewDate"
        app:layout_constraintStart_toEndOf="@+id/textViewDate" />

    <TextView
        android:id="@+id/textViewNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/number_doc"
        app:layout_constraintBaseline_toBaselineOf="@+id/textDate"
        app:layout_constraintStart_toEndOf="@+id/textDate" />

    <TextView
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="3"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewNumber"
        app:layout_constraintStart_toEndOf="@+id/textViewNumber" />

    <TextView
        android:id="@+id/textViewStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/store_doc"
        app:layout_constraintEnd_toStartOf="@+id/textViewSklad"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:hint="@string/companies_value"
        app:layout_constraintStart_toEndOf="@+id/navigation_rail"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

    <com.google.android.material.search.SearchView
        android:id="@+id/search_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:elevation="6dp"
        android:hint="@string/find_text"
        app:layout_constraintBottom_toTopOf="@+id/textAllSumm"
        app:layout_constraintEnd_toEndOf="@+id/search_bar"
        app:layout_constraintStart_toEndOf="@+id/navigation_rail"
        app:layout_constraintTop_toTopOf="@+id/search_bar"
        tools:ignore="MissingConstraints">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_pricegroup">

        </androidx.recyclerview.widget.RecyclerView>

    </com.google.android.material.search.SearchView>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:checked="true"
        android:visibility="gone"
        android:text="Самовывоз"
        app:layout_constraintBottom_toTopOf="@+id/search_view_adr"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar_adr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/adress_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_bar"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

    <com.google.android.material.search.SearchView
        android:id="@+id/search_view_adr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:hint="@string/find_text"
        app:layout_constraintBottom_toTopOf="@+id/textAllSumm"
        app:layout_constraintEnd_toEndOf="@+id/search_bar_adr"
        app:layout_constraintStart_toEndOf="@+id/search_view"
        app:layout_constraintTop_toTopOf="@+id/search_bar_adr"
        tools:ignore="MissingConstraints">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecycler_adr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_pricegroup">

        </androidx.recyclerview.widget.RecyclerView>

    </com.google.android.material.search.SearchView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerGoods"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/textAllSumm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/navigation_rail"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <TextView
        android:id="@+id/textViewSklad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/sklad_main_doc"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewStock"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewSumm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textAllSumm"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="TextSumm" />

    <TextView
        android:id="@+id/textAllSumm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/summ_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewSumm" />
</androidx.constraintlayout.widget.ConstraintLayout>