<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/md_theme_dark_onPrimary">

    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar_pricegroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/pricegroup"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar_vendors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/text_vendor"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar_pricegroup" />

    <com.google.android.material.search.SearchView
        android:id="@+id/search_view_pricegroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/find_text"
        tools:ignore="MissingConstraints">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecycler_pricegroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_pricegroup">

        </androidx.recyclerview.widget.RecyclerView>

    </com.google.android.material.search.SearchView>

    <com.google.android.material.search.SearchView
        android:id="@+id/search_view_vendors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/find_text"
        tools:ignore="MissingConstraints">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecycler_vendors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_pricegroup">

        </androidx.recyclerview.widget.RecyclerView>

    </com.google.android.material.search.SearchView>

    <Button
        android:id="@+id/elevatedButton"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/button_text_ok"
        android:textColor="@color/md_theme_dark_onSurfaceVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>