<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/panel_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.navigationrail.NavigationRailView
        android:id="@+id/navigation_rail"
        style="@style/Widget.MaterialComponents.NavigationRailView.Compact"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:elevation="4dp"
        app:headerLayout="@layout/layout_header"
        app:labelVisibilityMode="selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/navigation_rail_menu" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/navigation_rail"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_amount"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_text" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_pricegroup"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pricegroup" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_vendor"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vendor" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:hint="@string/find_text"
        android:visibility="invisible"
        app:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/navigation_rail"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <com.google.android.material.search.SearchView
        android:id="@+id/search_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="6dp"
        android:hint="@string/find_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/navigation_rail"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        tools:ignore="MissingConstraints">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_pricegroup">

        </androidx.recyclerview.widget.RecyclerView>

    </com.google.android.material.search.SearchView>


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView2"
        android:name="com.project.mobilemcm.ui.categorylist.CategoryListFragment"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragmentContainerView"
        app:layout_constraintStart_toEndOf="@+id/navigation_rail"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        tools:layout="@layout/fragment_good_list"
        tools:visibility="visible" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.project.mobilemcm.ui.goodlist.GoodListFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragmentContainerView2"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        tools:layout="@layout/fragment_good_list"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>